# pyadvcourse

./: LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
src/pyadvcourse/: __init__.py  mydummycode.py  mylittlecode.py
tests/: test_pyadvcourse.py
